@@ -8,7 +8,7 @@
 
 <h2>DuroDBMS Documentation</h2>
 
-<p>Release 0.19
+<p>Release 0.20
 
 <ul>
 <li><a href="durodt/tut.html">Duro D/T Tutorial</a></li>
